# nodejs-rivers-of-reckoning

./: AGENTS.md  ALIGNMENT_ASSESSMENT.md  CHANGELOG.md  CLAUDE.md  GAME_BIBLE.md  MIGRATION_SUMMARY.md  README.md  STRATA_INTEGRATION_PLAN.md  eslint.config.js  main.py  main_web.py  package.json  pnpm-lock.yaml  pyproject.toml  render.yaml  test_enhanced_features.py  test_game_integration.py  test_game_logic.py  test_library_structure.py  test_pyxel_migration.py  test_sprite_generation.py  tox.ini  vite.config.ts
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: asset-compilation.yml  claude-code.yml  codeql.yml  dependency-update.yml  docs.yml  nodejs-app.yml  python-app.yml  release.yml  test.yml  web-deployment.yml
docs/: conf.py  first_python_rpg.rst  index.rst  modules.rst  user_manual.rst
docs/_static/: custom.css
docs/api/: first_python_rpg.rst  index.rst  modules.rst  rivers_of_reckoning.rst
docs/development/: contributing.md  contributing.rst
docs/getting-started/: installation.md  installation.rst  quickstart.md  quickstart.rst
nodejs-rivers-of-reckoning/: .eslintrc.cjs  .gitignore  ISSUES.md  README.md  capacitor.config.ts  package.json  playwright.config.ts  vite.config.ts
nodejs-rivers-of-reckoning/public/: index.html
nodejs-rivers-of-reckoning/src/: App.tsx  main.tsx
nodejs-rivers-of-reckoning/tests/: game.spec.ts
playwright-report/: index.html
src/: App.tsx
src/components/: Combat.tsx  Enemy.tsx  GameHUD.tsx  Player.tsx  TitleScreen.tsx  VirtualJoystick.tsx  (+1 more)
tests/: game.spec.ts  new-features.spec.ts  test_game_integration.py
(+22 files in other folders)
