[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "first-python-rpg"
version = "0.3.0"
description = "A Python RPG game built with Pygame-ce, featuring procedural generation and modern game mechanics."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Role-Playing",
]
dependencies = [
    "pygame-ce>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "black>=24.0.0",
    "flake8>=7.3.0",
]
docs = [
    "sphinx>=9.0.4",
    "sphinx-rtd-theme>=3.0.2",
]
web = [
    "pygbag>=0.9.2",
]

[project.scripts]
first-python-rpg = "first_python_rpg.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/first_python_rpg"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/images",
    "/music",
    "/main.py",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
addopts = "-v"

[tool.black]
line-length = 127
target-version = ["py310", "py311", "py312", "py313"]
